# desktop-weather-app

./: .gitignore  README.md  dev-msvc.bat  fix-shortcut-icon.ps1  golden-circle-abstract-art-vibrant-yellow-orb_191095-80783.avif  overlay.html  package-lock.json  package.json  reinstall.bat  settings.html  update-deps.bat  update-installed-app.bat  vite.config.ts  widget.html
scripts/: prepare-app-icon.mjs  sync-public-icons.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-minimal-mode.toml
src-tauri/src/: commands.rs  lib.rs  main.rs
src/cloud-effect/: CloudScene.tsx  VolumetricClouds.tsx  index.tsx
src/codrops-weather/: CelestialBody.tsx  CelestialEnvironment.tsx  CelestialPostProcessing.tsx  Clouds.tsx  CodropsWeatherAnimation.tsx  CodropsWeatherScene.tsx  LightningBolts.tsx  LightningFlash.tsx  Moon.tsx  MoonEnvironment.tsx  PartlyCloudy.tsx  Rain.tsx  Snow.tsx  Sun.tsx  SunCameraRig.tsx  SunEnvironment.tsx  SunPostProcessing.tsx  Thunderstorm.tsx  TumbleweedOverlay.tsx  UmbrellaOverlay.tsx  WeatherEffects.tsx  Wind.tsx  intensity.ts  sunConfig.ts
src/components/: AnimationOrchestrator.tsx  TemperatureUnitToggle.tsx
src/hooks/: useLightningEffect.ts  useWeatherWatcher.ts
src/lightning-effect/: boltMeshes.ts  createLightningEffect.ts  generateBolt.ts
src/overlay/: OverlayApp.tsx  main.tsx
src/services/: weatherService.ts
src/settings/: LiquidGlassCard.tsx  SettingsApp.tsx  WeatherIndicator.tsx  liquidGlass.css  main.tsx  useCurrentWeather.ts
(+42 files in other folders)
