[package]
name = "weather-overlay"
version = "0.1.0"
description = "Desktop weather overlay with animated effects"
authors = ["Aelia"]
edition = "2021"

[lib]
name = "weather_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pin time: 0.3.48 conflicts with cookie 0.18.1 on rustc 1.93 (E0119)
time = "=0.3.36"
